updated README.md for Week_01